# norimaki-db

./: .mcp.json  Cargo.toml  README.md  plan.md  sample.rs  test_db.json
.serena/: project.yml
.serena/memories/: coding_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
examples/: boat_race_demo.rs  quick_start.rs
src/: engine.rs  error.rs  key.rs  lib.rs  store.rs  value.rs
testdata/: sample.rs
