[package]
name = "norimaki-db"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple key-value store for learning database concepts"
license = "MIT"
repository = "https://github.com/yourusername/norimaki-db"
keywords = ["database", "key-value", "storage", "learning"]
categories = ["database"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1"

[dev-dependencies]
